# unlimited_classifier

./: README.md  pyproject.toml  unlimited_classifier_with_phi3.ipynb
notebooks/: emotions_classification.ipynb
tests/: test_classifier.py
unlimited_classifier/: __init__.py  labels_trie.pyx  main.py  scorer.py  trie.py
