[tool.poetry]
name = "unlimited-classifier"
license = "Apache-2.0"
version = "0.0.3"
description = "Universal text classifier for generative models"
authors = ["knowledgator.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
transformers = ">=4.30.0"
torch = ">=1.10.0"
accelerate = ">=0.30.1"
bitsandbytes = ">=0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
